--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,6 +4,10 @@
   <ul class="member">
     <li class="name"><%= member.name %></li>
     <% binding.pry %>
-    <li class="role"><%= member.role %></li>
   </ul>
+<% end %>
+
+<h1>House Info</h1>
+<% @house_info.each do |info| %>
+  <%# this would display house info %>
 <% end %>
